Closed Bug 1624681 Opened 6 years ago Closed 3 years ago

AudioBufferSourceNode.detune should not be clamped between -1200 and 1200

Categories

(Core :: Web Audio, defect, P3)

74 Branch
defect

Tracking

()

RESOLVED FIXED
117 Branch
Tracking Status
firefox117 --- fixed

People

(Reporter: tuomas, Assigned: msub2)

Details

Attachments

(1 file)

User Agent: Mozilla/5.0 (X11; Linux x86_64; rv:74.0) Gecko/20100101 Firefox/74.0

Steps to reproduce:

var source = audioCtx.createBufferSource();
source.detune.value = 1300;

Actual results:

The sound is detuned 1200 cents.

Expected results:

The sound should be detuned 1300 cents. This is consistent with the latest Web Audio API specification and the reported source.detune.minValue and source.detune.maxValue. Also this works as expected in Chrome.

This limit seems to be from an old specification: https://www.w3.org/TR/2015/WD-webaudio-20151208/#widl-AudioBufferSourceNode-detune

Clamping is done here: https://hg.mozilla.org/mozilla-central/file/be37fac7bc9e1498727048b131a42cbac8214011/dom/media/webaudio/AudioBufferSourceNode.cpp#l464

Component: Untriaged → Web Audio
Product: Firefox → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true
Priority: -- → P3

Because this bug's Severity has not been changed from the default since it was filed, and it's Priority is P3 (Backlog,) indicating it has been triaged, the bug's Severity is being updated to S3 (normal.)

Severity: normal → S3
Assignee: nobody → msub2official
Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/810271a1fed4 Remove clamp on AudioBufferSourceNode.detune. r=padenot
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 117 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: